@@ -180,7 +180,7 @@ process. At present, four wall types are supported:
 .B
 .IP \-wb <x1> <x2> <x3> <x4> <x5> <x6>
 Add six plane wall objects to make a box containing the space x1<x<x2, x3<y<x4,
-and x5<z<z6. This can be useful for embedding a smaller box within a larger
+and x5<z<x6. This can be useful for embedding a smaller box within a larger
 container, in cases when the influence of particles outside the smaller box
 still need to be considered. This option is shorthand to avoid using the \-wp
 option six times.
